test/Modules/Inputs/objc-category-2/Base.h
begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
begin_expr_stmt
unit|@
name|interface
name|DVTSourceModel
comment|// expected-error {{duplicate interface definition for class}} \
comment|// expected-note {{previous definition is here}}
expr|@
name|end
end_expr_stmt

end_unit

